[gd_scene load_steps=2 format=3 uid="uid://byal7lnwpsy4h"]

[ext_resource type="Script" uid="uid://cj3cc425uxaqf" path="res://game/game/damage/damage_area.gd" id="1_up7dd"]

[node name="DamageArea" type="Area2D"]
script = ExtResource("1_up7dd")

[node name="DamageTimer" type="Timer" parent="." groups=["Damageable"]]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
